# Axxon-Backend

./: .gitignore  README.md
backend/: Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs  main.rs
backend/src/: .env  data_structs.rs  database.rs  db.rs  error_enums.rs  main.rs
backend/src/config/: database.rs
backend/src/data_structs/: datastructs.rs
backend/src/data_structs/model_structs/: board.rs
backend/src/db/entities/: board_members.rs  boards.rs  categories.rs  conversation_members.rs  conversations.rs  knex_migrations.rs  knex_migrations_lock.rs  labels.rs  message_attachments.rs  messages.rs  mod.rs  prelude.rs  todo_labels.rs  todos.rs  users.rs
backend/src/db/migration/: Cargo.toml  m20251206_103812_add_not_null_defaults_to_categories.rs
backend/src/db/models/: board.rs
backend/src/error_enums/: db_errors.rs
