[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# SeaORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

# For Result<T,E> conversions in API
thiserror = "1